# ai_in_docker

./: .gitignore  Dockerfile  Dockerfile.mcp  Makefile  chat_mistral.py  docker-compose.yml  pyproject.toml  readme.md  tinyproxy-whitelist.txt  tinyproxy.conf
.github/: copilot-instructions.md
docs/: api-reference.md  backup-restore.md  mcp-server.md  models.md  portfolio-summary.md  python-development.md  tools.md  troubleshooting.md
src/: agent.py  chat_mistral.py  mcp_server.py
