[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-docker-agent"
version = "0.1.0"
description = "Local AI agent with MCP server integration using Ollama"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Celine", email = ""}
]

dependencies = [
    # Core Ollama and LLM tools
    "ollama>=0.1.0",
    "transformers>=4.36.0",
    "torch>=2.1.0",
    
    # Agent and tool frameworks
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    
    # MCP (Model Context Protocol)
    "mcp>=0.1.0",
    
    # Async HTTP for API calls
    "httpx>=0.25.0",
    "aiohttp>=3.9.0",
    
    # Structured outputs from LLMs
    "instructor>=0.3.0",
    
    # Utilities
    "python-dotenv>=1.0.0",
    "typer>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.11.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[tool.hatch.version]
path = "pyproject.toml"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]  # Line too long (handled by formatter)

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
